put fucntion done, now the app records your vote

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,8 +66,21 @@
 
   
 }
+.Explore {
+  padding: 20px;
+  grid-column: 2;
+  grid-row: 2;
+
+  background-color: blueviolet;
+  
+}
 
 .listTicket{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.listTicketX{
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -75,7 +88,8 @@
 .ticketDisplay {
   padding: 5px 10px 5px 10px;
   border: 2px solid rgba(0, 0, 0, 0.3); 
-  border-radius: 25px
+  border-radius: 25px;
+  min-width: 200px
 }
 
 .Ballot{
